<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"><b>Catholic choirs</b></string>
    <string name="Chants">Songs</string>
    <string name="Evenements">Events</string>
    <string name="Finances">Finance</string>
    <string name="about">Abouts</string>
    <string name="categories">Categories</string>
    <string name="choristes">Members</string>
    <string name="contact_moi">To contact the Developeur at +237 690 87 60 04:)</string>
    <string name="contenue">Verses</string>
    <string name="historique">History</string>
    <string name="le_bureau">The Office</string>
    <string name="les_choriste">The Choristers</string>
    <string name="notre_paroise">Our Church</string>
    <string name="notre_st_patron">Our godfather</string>
    <string name="parametres">Parameters</string>
    <string name="patron">godfather</string>
    <string name="refrain">Chorus</string>
    <string name="reglements">Regulations</string>
    <string name="title_activity_chants">Songs</string>
    <string name="titre">Title</string>
    <string name="p_entree">Entries</string>
    <string name="p_kyries">Kyries</string>
    <string name="p_glorias">Glorias</string>
    <string name="p_processions">Evangelical Procéssions</string>
    <string name="p_acclamations">Cheering</string>
    <string name="p_pu">Prayers Universal</string>
    <string name="p_offertoires">Offertories </string>
    <string name="p_sanctus">Sanctus</string>
    <string name="p_paters">Paters</string>
    <string name="p_ad">Agneis deï</string>
    <string name="p_communions">Communions</string>
    <string name="p_sorties">Exits</string>
    <string name="p_divers">Animations and Various</string>
    <string name="p_credos">Credos</string>
    <string name="your">your</string>
    <string name="quitterApp">Hit on return a second time to leave the application</string>
    <string name="new_register">New Registration</string>
    <string name="save">save</string>
    <string name="reset">Reset</string>
    <string name="setup">Installation of the default package finished with Success</string>
    <string name="save_reset">Registration annulled</string>
    <string name="save_success">Registration done</string>
    <string name="update">Update</string>
    <string name="delete_success">Deletion done</string>
    <string name="Action">Action</string>
    <string name="f_sorties">Left</string>
    <string name="solde">Balance</string>
    <string name="f_entrees">Entered</string>
    <string name="events_recorded">Recorded Events</string>
    <string name="future_events">Future Events</string>
    <string name="passed_events">Passed Events</string>
    <string name="montant">Amount</string>
    <string name="type">Type</string>
    <string name="information">Information</string>
    <string name="date">Date</string>
    <string name="reason">Reason</string>
    <string name="place">Place</string>
    <string name="done">Done</string>
    <string name="concerned">Concerned</string>
    <string name="Asked_by">Asked by</string>
    <string name="clean_data">Clean Data</string>
    <array name="typeFinances">
        <item>@string/f_entrees</item>
        <item>@string/f_sorties</item>
    </array>
    <string name="my_choir"><b>Catholic choirs</b></string>
    <string name="canceled">Operation canceled</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Delete Confirm</string>
    <string name="delet_confirm_msg">Do you want indeed done this action?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="details">details</string>
    <string name="no_available_result">No available Result</string>
    <string name="biographie">Born in 1998 in the city of Bamougoum in western Cameroon in a Catholic family, Mogo Gabiapsi Ivan is a little computer genius since a young age, designing his first programs as a teenager. At the age of 18, he joined The African Institute of Informatics, and it is here, in 2019, that he creates takes his flight by working on numerous projects in various fields.</string>
    <string name="basic_project">Basic project</string>
    <string name="my_information">My Informations</string>
    <string name="name">Name</string>
    <string name="subname">Subname</string>
    <string name="contact">Contact</string>
    <string name="profession">Profession</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="desk">Desk</string>
    <string name="role">role</string>
    <string name="notification_by_sms">Notification by SMS</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="show_my_information_has_the_home">Show my information has the home</string>
    <string name="about_you">About you</string>
    <string name="generate_the_report">Generate the Report</string>
    <string name="beginning_of_exercise">beginning of exercise</string>
    <string name="end_of_exercise">End of exercise</string>
    <string name="result_period">Result of period</string>
    <string name="thanks_eval">thank for your Assessment</string>
    <string name="call">Call</string>
    <string name="no_choir">No chorister recorded</string>
    <string name="reload">try again</string>
</resources>