<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_info_black_24dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/title"
            android:textColor="#FFF"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="22dp"
            android:text="@string/delete_confirm"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:padding="20dp"
        android:text="@string/delet_confirm_msg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/no"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:background="@color/colorBs"
            android:text="@string/no"/>
        <Button
            android:id="@+id/yes"
            android:textColor="#FFF"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/success"
            android:text="@string/yes"/>
    </LinearLayout>
</LinearLayout>