<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".ShowActivity"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_gravity="center_vertical"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/image"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="150dp"
        android:src="@drawable/ic_event_black_24dp"/>
    <TableLayout
        android:id="@+id/evenement"
        android:visibility="gone"
        android:foregroundGravity="center_horizontal"
        android:layout_width="wrap_content"
        android:shrinkColumns="2"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TableRow android:layout_marginBottom="15dp">
                <TextView
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_column="0"
                    android:text="@string/reason"/>
            <TextView
                android:id="@+id/raison"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/place"/>
            <TextView
                android:id="@+id/lieu"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/concerned"/>
            <TextView
                android:id="@+id/concerner"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/date"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginTop="25dp">

            <Button
                android:id="@+id/notify"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:layout_span="2"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="@string/notification_by_sms"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/finance"
        android:visibility="gone"
        android:foregroundGravity="center_horizontal"
        android:layout_width="wrap_content"
        android:shrinkColumns="2"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/type"/>
            <TextView
                android:id="@+id/typefinance"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/montant"/>
            <TextView
                android:id="@+id/montant"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/information"/>
            <TextView
                android:id="@+id/information"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/dateF"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/choristes"
        android:visibility="gone"
        android:foregroundGravity="center_horizontal"
        android:layout_width="wrap_content"
        android:shrinkColumns="2"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/nomData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/subname"/>
            <TextView
                android:id="@+id/prenomData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/gender"/>
            <TextView
                android:id="@+id/sexeData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/desk"/>
            <TextView
                android:id="@+id/pupitreData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/role"/>
            <TextView
                android:id="@+id/roleData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/profession"/>
            <TextView
                android:id="@+id/professionData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/date_of_birth"/>
            <TextView
                android:id="@+id/naissanceData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginBottom="15dp">
            <TextView
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_column="0"
                android:text="@string/contact"/>
            <TextView
                android:id="@+id/contactData"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_column="0"
                android:textColor="@color/colorPrimary"
                android:text="Test"/>
        </TableRow>
        <TableRow android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/call"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@color/success"
                    android:src="@drawable/ic_phone_black_24dp"/>
        </TableRow>
    </TableLayout>


</LinearLayout>
</ScrollView>