<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blackstar.MkOpportunity.Mychoir.Forms.ChoirForm"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        >
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_column="0"
                android:text="@string/information"
                android:textStyle="bold" />

            <EditText
                android:gravity="center"
                android:layout_column="1"
                android:id="@+id/informationdata"
                android:layout_marginLeft="10dp"
                android:hint="@string/information"
                android:inputType="text"
                android:lineHeight="5dp" />
        </TableRow>

        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_column="0"
                android:text="@string/montant"
                android:textStyle="bold" />

            <EditText
                android:gravity="center"
                android:id="@+id/montant"
                android:layout_marginLeft="10dp"
                android:hint="@string/montant"
                android:layout_column="1"
                android:inputType="number"
                android:lineHeight="5dp" />
        </TableRow>
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/typefinance"
                android:spinnerMode="dropdown"
                android:autofillHints="@string/type"
                android:layout_marginLeft="10dp"
                android:entries="@array/typeFinances"
                android:layout_column="1" />
        </TableRow>
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp">
            <TextView

                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold" />
            <DatePicker
                android:id="@+id/date"
                android:layout_marginLeft="10dp"
                android:layout_column="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"></DatePicker>
        </TableRow>
        <TableRow android:layout_margin="10dp">

            <RelativeLayout  android:layout_span="2"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_marginRight="15dp"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:text="@string/save" />
                <Button
                    android:id="@+id/reset"
                    android:textColor="#fff"
                    android:background="@color/colorBs"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/save"
                    android:text="@string/reset"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</ScrollView>
