<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blackstar.MkOpportunity.Mychoir.Forms.ChoirForm"
    android:layout_height="match_parent">
    <TableLayout
        android:padding="5sp"
        android:shrinkColumns="1"
        android:stretchColumns="1"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <TableRow>
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:text="@string/titre"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_column="1"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <EditText
                android:layout_column="1"
                android:id="@+id/titredata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/titre"
                android:inputType="text"
                android:lineHeight="5dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/refrain"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:layout_column="1"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <EditText
                android:layout_column="1"
                android:id="@+id/refraindata"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/refrain"
                android:gravity="left"
                android:inputType="text|textMultiLine"
                android:lineHeight="5dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/contenue"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:layout_column="1"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <EditText
                android:layout_column="1"
                android:id="@+id/contenuedata"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="left"
                android:layout_marginLeft="15dp"
                android:hint="@string/contenue"
                android:inputType="text|textMultiLine"
                android:lineHeight="5dp" />
        </TableRow>
        <TableRow>
            <RelativeLayout  android:layout_column="1"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_marginRight="15dp"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:text="@string/save" />
                <Button
                    android:id="@+id/reset"
                    android:textColor="#fff"
                    android:background="@color/colorBs"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/save"
                    android:text="@string/reset"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</ScrollView>